# MazeGenerator

./: .gitignore  CMakeLists.txt  README.md
src/: application.cpp  main.cpp  maze.cpp
src/include/: application.h  maze.h  maze_visuals.h
